Version 5.11
------------
Bug Fixes
* Fixed CWnd::Detach
* Eliminated possible deadlock in CWinApp::Trace
* Removed flicker when switching maximised MDI child windows.

Version 5.1
-----------
New Features:
* Existing windows can be subclassed and converted to CWnd objects using Attach.
* Dialog items can be sublcassed and converted to CWnd objects, using AttachDlgItem.
* Improvements to CToolbar. The toolbar uses image lists which support using 
  separate bitmaps for normal, hot and disabled buttons. Text can be added
  to toolbar buttons, and the style can be set.
* Improvements to CStatusbar.  
* Notifications from common controls are reflected back to the CWnd object that
  generated them. 
* Messages from old style common controls are reflected back to the CWnd object
  that generated them.
  
Major Changes:
* Major updates to the CToolbar and CStatubar classes.
* Notification reflection.  WM_NOTIFY messages from child windows now call 
  OnNotifyReflect in the CWnd that generated them.
* Message reflection. Some controls send notifications to the parent window
  via specific messages such as WM_CTLCOLORSTATIC. These messages are reflected
  back to the CWnd object that generated them via OnMessageReflect.
* Existing windows (including dialog items) can now be attached to a CWnd.
  The window is automatically subclassed when attached to a CWnd.
* Integrated subclassing and superclassing into the framework. Superclassing and
  subclassing is much simpler now.  Win32++ now keeps track of the previous
  window procedure, and calls it automatically at the end of CWnd::WndProc
* Toolbar notifies frame via ToolbarNotify when the mouse is over a toolbar 
  button.
* The keyboard indicators in the status bar are updated on a timer, rather than
  attempting catch keydown messages and notifications.
* Applications can now set a hot toolbar bitmap, and a disabled toolbar bitmap
  in addition to the standard toolbar bitmap for toolbar buttons.