@@ -20,7 +20,6 @@ public:
 	virtual void OnAllWindowsCreated();
 	virtual void PerformanceTest();
 	virtual void SendText(LPCTSTR str);
-	static DWORD WINAPI ThreadCallback(LPVOID pInt);
 
 protected:
 	virtual void OnCreate();
@@ -31,12 +30,10 @@ protected:
 private:
 	enum Constants
 	{
-		WM_WINDOWCREATED = WM_USER+1,
-		WM_TESTMESSAGE   = WM_USER+2
+		WM_WINDOWCREATED     = WM_USER+1,
+		WM_ALLWINDOWSCREATED = WM_USER+2,
+		WM_TESTMESSAGE       = WM_USER+3
 	};
-
-	static HANDLE m_ThreadHandles[MAX_THREADS];
-	static CThreadWnd* m_ThreadCWnds[MAX_THREADS];
 
 	int   m_IntArray[MAX_THREADS];
 	DWORD m_ThreadID[MAX_THREADS];
